# Major-Assignment-2-Duffy-FantasyFootball

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: reflection.txt  todo.txt
major_assignment_2_duffy/: config.py  dataset.py
notebooks/: analysis.ipynb
